--- a/talks/talks/2025_04-group_meeting-natural_vs_engineered_systems.jinja2
+++ b/talks/talks/2025_04-group_meeting-natural_vs_engineered_systems.jinja2
@@ -446,14 +446,45 @@ The AI scientist - high potential for drug discovery (mechanical search), low po
 
     <ul>
       <li class="fragment">No pcells, no stdcells, no synthesis, no routing rules, no DRC, no LVS</li>
-      <li class="fragment">Learn a new abstraction stack from scratch
+      <li class="fragment">Learn a new fuzzy abstraction stack from scratch
         <ul><li>specification → photomask → silicon → training data</li></ul>
       </li>
     </ul>
   </section>
 
   <section>
-  don't do this in academia, please collect your VC money and do it outside
+    <h2>LLMs for RTL</h2>
+
+    <ul>
+      <li class="fragment">It will continue to get better</li>
+      <li class="fragment">As of a few days ago: <a href="https://arxiv.org/pdf/2504.19144">arXiv</a></li>
+      <li class="fragment"><img src="./figs/natural_vs_engineered_systems/chisel_llm.png" width="40%" /></li>
+    </ul>
+
+    <ul>
+      <li class="fragment">Lots of startups in this area
+        <ul>
+          <li>ChipAgents, ChipStack, MooresLabAI</li>
+        </ul>
+      </li>
+      <li class="fragment">Don't do this in academia, please collect your VC money</li>
+      <li class="fragment">Focus ML efforts on in-the-loop algorithmic enhancements and breaking engineered abstractions (the RFIC area is ripe)</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>The AI Scientist</h2>
+
+    <ul>
+      <li class="fragment">Has anyone tried this use case?</li>
+      <li class="fragment">My experience has been quite poor. LLMs will just regurgitate buzzwords</li>
+      <li class="fragment">High potential for drug discovery
+        <ul><li>Mechanical search, mechanical investigative process, mechanical hypothesis building</ul></li>
+      </li>
+      <li class="fragment">Low potential for true discovery (not so mechanical)
+        <ul><li>Drug discovery, materials engineering, and mathematics seem like the first targets</li></ul>
+      </li>
+    </ul>
   </section>
 </section>
 {% endblock %}
